--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <p>Welcome Back!</p>
                 <h1>Thomas Henry</h1>
             </div>
-            <div>
-                <img src="./svg/brown_circle.svg" alt="" class="circle">
+            <div class="welcome-design">
+                <img src="./svg/brown_circle.svg" alt="">
                 <img src="./svg/line.svg" alt="" class="line">
             </div>
-            <div>
+            <div class="welcome-design">
                 <img src="./svg/circleline.svg" alt="">
                 <img src="./svg/polygon.svg" alt="">
                 <img src="./svg/brown_circle.svg" alt=""></div>
